# gadgetron

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  demo.sh  deny.toml  gadgetron.example.toml  gadgetron.toml  verify_cycle.sh
bundles/document-formats/: Cargo.toml
bundles/document-formats/src/: lib.rs  markdown.rs  pdf.rs
bundles/log-analyzer/: Cargo.toml  bundle.toml
bundles/log-analyzer/src/: comments.rs  gadgets.rs  lib.rs  llm.rs  model.rs  rules.rs  scanner.rs  store.rs
bundles/news-intelligence/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/news-intelligence/migrations/: 20260713000001_news_base.sql  20260713000002_article_source_identity.sql
bundles/news-intelligence/recipes/: news-distillation.json  news-research.json  source-collection.json
bundles/news-intelligence/schema/: domain.json
bundles/news-intelligence/scripts/: build-package.sh  stage-dev-package.sh
bundles/news-intelligence/src/: lib.rs  main.rs  news.rs
bundles/news-intelligence/tests/: package_contract.rs
bundles/restaurant-research/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/restaurant-research/migrations/: 20260712000001_restaurant_base.sql
bundles/restaurant-research/recipes/: core-source-collection.json  core-source-research.json
bundles/restaurant-research/schema/: domain.json
bundles/restaurant-research/scripts/: build-package.sh  stage-dev-package.sh
bundles/restaurant-research/src/: lib.rs  main.rs  restaurant.rs
bundles/restaurant-research/tests/: package_contract.rs
bundles/server-administrator/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/server-administrator/migrations/: 20260421000001_host_metrics.sql  20260616000001_alert_state.sql  20260711000001_operational_vertical.sql  20260711000002_target_health.sql  20260712000001_metric_alert_rules.sql  20260712000002_gadgetini_cooling.sql  20260712000003_gadgetini_lifecycle.sql  20260714000001_metric_history_ranges.sql  20260715000001_cluster_enrollment.sql  20260715000002_incident_history.sql  20260715000003_incident_outcomes.sql  20260715000004_incident_experience.sql  20260716000001_incident_signals.sql  20260716000002_server_profile_override.sql  20260716000003_incident_safe_stop.sql  20260716000004_incident_recovery_validation.sql  20260716000005_typed_temperature_cleanup.sql  20260716000006_incident_recovery_outcome.sql  20260716000007_incident_recovery_posture.sql  20260716000008_log_triage_guidance.sql  20260717000001_incident_knowledge_snapshot.sql  20260717000002_incident_enrichment_dispatch.sql  20260718000001_incident_acting_space.sql
bundles/server-administrator/scripts/: build-package.sh  stage-dev-package.sh
bundles/server-administrator/src/: alerts.rs  cooling.rs  enrollment.rs  enrollment_job.rs  lib.rs  logs.rs  main.rs  metrics.rs  operational.rs  telemetry.rs  topology.rs
bundles/server-administrator/tests/: migration_adopter.rs
bundles/server-operations-intelligence/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/server-operations-intelligence/migrations/: 20260717000001_log_finding_enrichment.sql  20260717000002_incident_enrichment.sql
bundles/server-operations-intelligence/recipes/: finding-enrichment.json  incident-enrichment.json  incident-research.json  insight-synthesis.json  runbook-gardening.json  source-collection.json
bundles/server-operations-intelligence/schema/: domain.json
bundles/server-operations-intelligence/scripts/: build-package.sh  stage-dev-package.sh
bundles/server-operations-intelligence/src/: main.rs
bundles/server-operations-intelligence/tests/: package_contract.rs
bundles/travel-intelligence/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/travel-intelligence/recipes/: destination-research.json  insight-synthesis.json  option-gardening.json  source-collection.json
bundles/travel-intelligence/schema/: domain.json
bundles/travel-intelligence/scripts/: build-package.sh  stage-dev-package.sh
bundles/travel-intelligence/src/: main.rs
bundles/travel-intelligence/tests/: package_contract.rs
bundles/travel-planner/: Cargo.toml  README.md  catalog.template.toml  package.template.toml
bundles/travel-planner/migrations/: 20260711000001_travel_base.sql  20260712000002_restaurant_bridge.sql  20260712000004_disruption_replan.sql
bundles/travel-planner/scripts/: build-package.sh  stage-dev-package.sh
bundles/travel-planner/src/: lib.rs  main.rs  travel.rs
bundles/travel-planner/tests/: package_contract.rs
crates/gadgetron-bundle-host/: Cargo.toml
crates/gadgetron-bundle-host/src/: broker.rs  error.rs  installed.rs  lib.rs  package.rs  session.rs
crates/gadgetron-bundle-migrations/: Cargo.toml
crates/gadgetron-bundle-migrations/src/: error.rs  lib.rs
crates/gadgetron-bundle-migrations/tests/: postgres_matrix.rs
crates/gadgetron-bundle-runtime/: Cargo.toml
crates/gadgetron-bundle-runtime/src/: lib.rs
crates/gadgetron-bundle-sdk/: Cargo.toml
crates/gadgetron-bundle-sdk/src/: broker.rs  bundle_set.rs  dependency.rs  error.rs  id.rs  intelligence.rs  lib.rs  manifest.rs  ontology.rs  protocol.rs
crates/gadgetron-bundle-sdk/tests/: dependency_boundary.rs
crates/gadgetron-bundle-supervisor/: Cargo.toml
crates/gadgetron-cli/: Cargo.toml
crates/gadgetron-core/: Cargo.toml
crates/gadgetron-core/src/: ui.rs  (+13 more)
crates/gadgetron-gateway/: Cargo.toml
crates/gadgetron-kairos/: Cargo.toml
crates/gadgetron-knowledge/: Cargo.toml
crates/gadgetron-node/: Cargo.toml
crates/gadgetron-penny/: Cargo.toml
crates/gadgetron-provider/: Cargo.toml
crates/gadgetron-router/: Cargo.toml
crates/gadgetron-scheduler/: Cargo.toml
crates/gadgetron-testing/: Cargo.toml
crates/gadgetron-tui/: Cargo.toml
crates/gadgetron-web/: Cargo.toml  README.md  build.rs  build_logic.rs
crates/gadgetron-xaas/: Cargo.toml
plugins/plugin-document-formats/: Cargo.toml
plugins/plugin-server-monitor/: Cargo.toml
(+810 files in other folders)
