[workspace]
resolver = "2"
members = [
    "crates/gadgetron-core",
    "crates/gadgetron-provider",
    "crates/gadgetron-router",
    "crates/gadgetron-gateway",
    "crates/gadgetron-scheduler",
    "crates/gadgetron-node",
    "crates/gadgetron-tui",
    "crates/gadgetron-cli",
    "crates/gadgetron-xaas",
    "crates/gadgetron-testing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Internal
gadgetron-core = { path = "crates/gadgetron-core" }
gadgetron-provider = { path = "crates/gadgetron-provider" }
gadgetron-router = { path = "crates/gadgetron-router" }
gadgetron-gateway = { path = "crates/gadgetron-gateway" }
gadgetron-scheduler = { path = "crates/gadgetron-scheduler" }
gadgetron-node = { path = "crates/gadgetron-node" }
gadgetron-tui = { path = "crates/gadgetron-tui" }
gadgetron-xaas = { path = "crates/gadgetron-xaas" }
gadgetron-testing = { path = "crates/gadgetron-testing" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Streaming
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"

# System monitoring
sysinfo = "0.33"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

# Cache
moka = { version = "0.12", features = ["future"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
