[workspace]
resolver = "2"
members = [
    "crates/gadgetron-core",
    "crates/gadgetron-provider",
    "crates/gadgetron-router",
    "crates/gadgetron-gateway",
    "crates/gadgetron-scheduler",
    "crates/gadgetron-node",
    "crates/gadgetron-tui",
    "crates/gadgetron-cli",
    "crates/gadgetron-xaas",
    "crates/gadgetron-testing",
    "crates/gadgetron-web",
    "crates/gadgetron-knowledge",
    "crates/gadgetron-penny",
    "plugins/plugin-document-formats",
]

[workspace.package]
version = "0.4.10"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Internal
gadgetron-core = { path = "crates/gadgetron-core" }
gadgetron-provider = { path = "crates/gadgetron-provider" }
gadgetron-router = { path = "crates/gadgetron-router" }
gadgetron-gateway = { path = "crates/gadgetron-gateway" }
gadgetron-scheduler = { path = "crates/gadgetron-scheduler" }
gadgetron-node = { path = "crates/gadgetron-node" }
gadgetron-tui = { path = "crates/gadgetron-tui" }
gadgetron-xaas = { path = "crates/gadgetron-xaas" }
gadgetron-testing = { path = "crates/gadgetron-testing" }
gadgetron-web = { path = "crates/gadgetron-web" }
gadgetron-knowledge = { path = "crates/gadgetron-knowledge" }
gadgetron-penny = { path = "crates/gadgetron-penny" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Streaming
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
async-stream = "0.3"

# System monitoring
sysinfo = "0.33"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
arc-swap = "1.7"

# Cache
moka = { version = "0.12", features = ["future"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Cryptography / randomness
rand = "0.8"

# Wiki (knowledge layer)
git2 = { version = "0.20", default-features = false }
regex = "1"
once_cell = "1"
libc = "0.2"

# Testing infrastructure
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
axum-test = "17.3"
tempfile = "3"

# gadgetron-web static embed
include_dir = "0.7.4"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"

# JSON Schema validation (used by workbench direct-action input validation)
jsonschema = "0.33"
