[package]
name = "gadgetron-bundle-document-formats"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Document ingestion extractors — markdown and PDF; docx/pptx planned"

[features]
default = ["markdown"]
# Always-on for knowledge ingest — the canonical wiki format. Kept
# feature-gated so the pdf / docx / pptx features can compose.
markdown = []
# `pdf-extract` crate wraps `lopdf` and parses the PDF content stream
# into a UTF-8 text layer. Kept optional so build-machine images that
# don't care about PDF ingestion skip the ~10 crate transitive chain
# (lopdf, encoding_rs, adobe-cmap-parser …).
# Pulls in `tokio` with just the `rt` feature (for `spawn_blocking`)
# to keep lopdf's CPU-heavy walk off the caller's async reactor thread.
pdf = ["pdf-extract", "tokio"]
# Placeholder features — implementations land later via pandoc
# subprocess extractors.
# docx = []
# pptx = []

[dependencies]
async-trait = { workspace = true }
gadgetron-core = { workspace = true }
serde_json = { workspace = true }
semver = "1"
# Leaf dependency — pdf-extract is only compiled into the document-formats
# bundle, never into gadgetron-core / knowledge. Version 0.7.x is the last
# branch that builds against a stable `lopdf` ABI; 0.10.x churns on API
# surface.
pdf-extract = { version = "0.7", optional = true }
# Optional — only needed for `PdfExtractor::extract` to off-load the
# synchronous lopdf walk onto `tokio::task::spawn_blocking`. Gated by the
# `pdf` feature to preserve the "markdown-only builds pull zero extra
# transitives" guarantee.
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
# `#[tokio::test]` for the async extract-fn tests.
tokio = { workspace = true, features = ["macros", "rt"] }
