[package]
name = "gadgetron-bundle-log-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Periodic log analyzer — incremental dmesg/journalctl/auth scan with rule-based + LLM classification"

[dependencies]
async-trait = { workspace = true }
gadgetron-core = { workspace = true }
gadgetron-bundle-server-monitor = { path = "../server-monitor" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "rt", "macros", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
regex = "1"
once_cell = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
