[package]
name = "gadgetron-bundle-host"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core-owned transport host for sandboxed external Bundle runtimes"

[dependencies]
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
gadgetron-bundle-sdk = { workspace = true }
hex = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "time"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
