[package]
name = "gadgetron-bundle-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Public, domain-neutral Bundle package and host-protocol contracts"

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
