[package]
name = "gadgetron-bundle-supervisor"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core-owned fail-closed Linux sandbox supervisor for external Bundles"

[dependencies]
base64 = "0.22"
gadgetron-bundle-host = { workspace = true }
gadgetron-bundle-sdk = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
