[package]
name = "gadgetron-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gadgetron"
path = "src/main.rs"

[dependencies]
gadgetron-core = { workspace = true }
gadgetron-provider = { workspace = true }
gadgetron-router = { workspace = true }
gadgetron-gateway = { workspace = true }
gadgetron-xaas = { workspace = true }
gadgetron-tui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
