[package]
name = "gadgetron-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
[[bin]]
name = "gadgetron"
path = "src/main.rs"

[dependencies]
gadgetron-core = { workspace = true }
gadgetron-provider = { workspace = true }
gadgetron-router = { workspace = true }
gadgetron-gateway = { workspace = true }
gadgetron-xaas = { workspace = true }
gadgetron-tui = { workspace = true }
gadgetron-penny = { workspace = true }
gadgetron-knowledge = { workspace = true }
gadgetron-bundle-migrations = { workspace = true }
gadgetron-bundle-supervisor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
arc-swap = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = { workspace = true }
gadgetron-bundle-sdk = { workspace = true }
gadgetron-testing = { workspace = true }
hex = { workspace = true }
sha2 = "0.11"
tempfile = { workspace = true }

[features]
default = ["web-ui"]
web-ui = ["gadgetron-gateway/web-ui"]
