[package]
name = "gadgetron-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
# Bundle manifest — `BundleManifest.version` parsing.
semver = { version = "1", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
# Writable-path probing for `bundles_home` resolver tests. `tempfile` is in
# workspace dev-dep catalog; `gadgetron-core` becomes the first consumer.
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
