[package]
name = "gadgetron-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
gadgetron-core = { workspace = true }
gadgetron-provider = { workspace = true }
gadgetron-router = { workspace = true }
gadgetron-xaas = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "trace"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
