[package]
name = "gadgetron-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gadgetron-core = { workspace = true }
gadgetron-knowledge = { workspace = true }
gadgetron-provider = { workspace = true }
gadgetron-router = { workspace = true }
gadgetron-xaas = { workspace = true }
gadgetron-web = { workspace = true, optional = true }
axum = { workspace = true, features = ["ws"] }
percent-encoding = "2.3.1"
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "trace", "set-header"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
jsonschema = { workspace = true }
moka = { workspace = true }

[features]
default = ["web-ui"]
# Compile-in the embedded Gadgetron Web UI (`gadgetron-web` crate).
# Disable with `--no-default-features` for headless / API-only deployments
# per D-20260414-02 M-W4 + docs/manual/installation.md "Headless build".
web-ui = ["dep:gadgetron-web"]

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
axum-test = { workspace = true }

[[bench]]
name = "middleware_chain"
harness = false

[[bench]]
name = "auth_cache"
harness = false

[[bench]]
name = "router"
harness = false
