[package]
name = "gadgetron-kairos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kairos agent adapter — Claude Code subprocess + McpToolRegistry dispatch"

[lib]
path = "src/lib.rs"

[dependencies]
gadgetron-core = { workspace = true }
gadgetron-knowledge = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# subprocess management
regex = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }
