[package]
name = "gadgetron-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Knowledge layer for Penny — wiki store, web search proxy, MCP server"

[dependencies]
gadgetron-core = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
# W3-KL-1: `FuturesUnordered` fanout for `KnowledgeService` derived-plug
# apply (authority doc §2.2.5). `futures` is already in the workspace
# catalog via gadgetron-core.
futures = { workspace = true }

# Wiki subsystem — git backend + credential patterns
git2 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
libc = { workspace = true }
include_dir = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# Web search subsystem (SearXNG client)
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
gadgetron-testing = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
