[package]
name = "gadgetron-provider"
version.workspace = true
edition.workspace = true

[dependencies]
gadgetron-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
eventsource-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3.6"
