[package]
name = "gadgetron-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gadgetron-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow.workspace = true
