[package]
name = "gadgetron-xaas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multi-tenant platform: auth, quota, billing, audit (PostgreSQL + sqlx)"

[dependencies]
gadgetron-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
moka = { workspace = true }
sha2 = "0.10"
hex = "0.4"
rand = { workspace = true }
